--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8' />
+    <meta charset='utf-8'>
     <title>Redirectatob</title>
   </head>
   <body>
+    <noscript>
+      Sorry, the redirect doesn't work without having JavaScript enabled! D:<br>
+      Please enable JavaScript for this website.
+    </noscript>
+    
     <script>
-      var hash = location.hash.slice(1).trim();
-      try {
-        var decoded = atob(hash);
-        document.body.appendChild(document.createTextNode('Redirecting to '));
-        var a = document.createElement('a');
-        a.appendChild(document.createTextNode(decoded));
-        a.href = decoded;
-        document.body.appendChild(a);
-        document.body.appendChild(document.createTextNode('...'));
-        location.replace(a);
-      } catch(err) {
-        document.write('Invalid redirect D:');
-        console.log(err);
-      }
+      (function() {
+        var hash = location.hash.slice(1).trim();
+        try {
+          var decoded = atob(hash);
+          if (decoded.length < 1) {
+            document.write('No redirect passed.');
+            return;
+          }
+          document.body.appendChild(document.createTextNode('Redirecting to '));
+          var a = document.createElement('a');
+          a.appendChild(document.createTextNode(decoded));
+          a.href = decoded;
+          document.body.appendChild(a);
+          document.body.appendChild(document.createTextNode('...'));
+          location.replace(a);
+        } catch(err) {
+          document.write('Invalid redirect D:');
+          console.log(err);
+        }
+      }());
     </script>
   </body>
 </html>
