--- a/make.html
+++ b/make.html
@@ -7,13 +7,20 @@
   <body>
     <h1>Make a rediractatob</h1>
     <p>Redirectatobs only work for people who have JavaScript! So you should probably only be giving these URLs to your hacker friends.</p>
-    <form>
+    <form id='form'>
       <input type='text' placeholder='URL' id='url'>
       <output></output>
     </form>
     <script>
+      function update() {
+        document.querySelector('output').innerText = btoa(event.target.value);
+      }
       document.getElementById('url').addEventListener('value', function(event) {
-        console.log(event.target.value, btoa(event.target.value));
+        update();
+      });
+      document.getElementById('form').addEventListener('submit', function(event) {
+        event.preventDefault();
+        update();
       });
     </script>
   </body>
