--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             document.write('No redirect passed.');
             return;
           }
+          if (!(decoded.test(/:\/\//))) {
+            document.write('No protocol specified.');
+            return;
+          }
           document.body.appendChild(document.createTextNode('Redirecting to '));
           var a = document.createElement('a');
           a.appendChild(document.createTextNode(decoded));
