--- a/index.html
+++ b/index.html
@@ -27,13 +27,8 @@
             location.replace('http://redirectatob.github.io/make.html');
             return;
           }
-          var protocol = decoded.match(/^([a-zA-Z]+)?:\/\//);
-          if (!protocol) {
-            document.write('No protocol specified.');
-            return;
-          }
-          protocol = protocol[1];
-          if (!['data', 'http', 'https'].includes(protocol.toLowerCase())) {
+          var protocol = decoded.match();
+          if (!/^((http|https):\/\/|data:)/.test(decoded)) {
             document.write('Invalid protocol specified.');
             return;
           }
