Redirect to make.html on same domain, for easier development

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           if (decoded.length < 1) {
             document.write('No redirect passed - sending you to the make page: ');
             makea('http://redirectatob.github.io/make.html');
-            location.replace('http://redirectatob.github.io/make.html');
+            location.replace('make.html');
             return;
           }
           var protocol = decoded.match();
