Fix overflow issue with generated URL
Ha there gonna be conflicts, I can feel it.

--- a/make.html
+++ b/make.html
@@ -22,6 +22,7 @@
         var u = 'http://redirectatob.github.io/index.html#' + btoa(document.getElementById('url').value);
         var a = document.querySelector('a');
         a.href = u;
+        a.style.wordWrap = "break-word";
         a.innerText = u;
       }
       document.getElementById('url').addEventListener('value', function(event) {
