--- a/make.html
+++ b/make.html
@@ -22,9 +22,9 @@
         var u = 'http://redirectatob.github.io/index.html#';
         var r = document.getElementById('url').value;
         try {
-          u += btoa(r)
+          u += btoa(r);
         } catch (e) {
-          u += btoa("!" + encodeURIComponent(r))
+          u += btoa("!" + encodeURIComponent(r));
         }
         var a = document.querySelector('a');
         a.href = u;
