Make make.html output HTTPS links instead of HTTP

--- a/make.html
+++ b/make.html
@@ -19,7 +19,7 @@
     </div>
     <script>
       function update() {
-        var u = 'http://redirectatob.github.io/index.html#' + btoa(document.getElementById('url').value);
+        var u = 'https://redirectatob.github.io/index.html#' + btoa(document.getElementById('url').value);
         var a = document.querySelector('a');
         a.href = u;
         a.style.wordWrap = "break-word";
