feat(make.html): Set 'type' attribute to 'url'
This makes it easier for mobile users to enter URLs. Together with
@towerofnix, this has been tested in Chrome/Firefox/IE/Edge/Safari/Opera

--- a/make.html
+++ b/make.html
@@ -10,7 +10,7 @@
       <h1>Make a redirectatob</h1>
       <p>Redirectatobs only work for people who have JavaScript! So you should probably only be giving these URLs to your hacker friends.</p>
       <form id='form'>
-        <input type='text' placeholder='URL' id='url'>
+        <input type='url' placeholder='URL' id='url'>
         <a href='#'></a>
       </form>
       <h2>What is redirectatob?</h2>
