--- a/make.html
+++ b/make.html
@@ -10,7 +10,7 @@
       <h1>Make a redirectatob</h1>
       <p>Redirectatobs only work for people who have JavaScript! So you should probably only be giving these URLs to your hacker friends.</p>
       <form id="form">
-        <input type="url" placeholder="URL" id="url">
+        <input type="url" title="You can only use http://, https://, and data:" placeholder="URL" id="url" pattern="^((http|https)://|data:).*">
         <a href="#"></a>
       </form>
       <h2>What is redirectatob?</h2>
