feat(make.html): Error messages for old browsers
All of: Chrome/Opera/Firefox/Safari/IE/Edge should support a JS-free
version. However, just in case, a mildly ugly error prompt will appear
and prevent the validation.

--- a/make.html
+++ b/make.html
@@ -11,7 +11,8 @@
       <p>Redirectatobs only work for people who have JavaScript! So you should probably only be giving these URLs to your hacker friends.</p>
       <form id="form">
         <input type="url" title="You can only use http://, https://, and data:" placeholder="URL" id="url" pattern="^((http|https)://|data:).*">
-        <a href="#"></a>
+	<div id="error"></div>
+	<a href="#"></a>
       </form>
       <h2>What is redirectatob?</h2>
       <p>Maybe it'll help if you think of them instead of redirect<code>atob</code>s. Basically, redirectatob is a webpage that you pass a URL to in the location hash (i.e. domain/page.html<b>#hash</b>, but encoded with <code>btoa</code>. The webpage will convert the encoded hash back into a URL using <code>atob</code> through the client's JavaScript. I made it so that I could give this URL - <a href="http://www.woodus.com/den/games/dq4ds/mugshots.php">http://www.woodus.com/den/games/dq4ds/mugshots.php</a> - to a friend of mine. The site's blacklist was preventing me from posting the link, and, as it had happened to me multiple times before, I decided I needed to make a redirect service.</p>
@@ -21,6 +22,17 @@
       function update() {
         var u = 'https://redirectatob.github.io/index.html#';
         var r = document.getElementById('url').value;
+
+        // All modern browsers support the pattern attribute, but just in case:
+        if (r && !/^((http|https):\/\/|data:)/.test(r)) {
+          document.getElementById('error').innerText = 'You can only use http://, https://, and data:'
+          document.getElementById('url').innerText = ''
+
+          return 
+	} else {
+          document.getElementById('error').innerText = ''
+        }
+
         try {
           u += btoa(r);
         } catch (e) {
