--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             return;
           }
           var protocol = decoded.match();
-          if (!/^((https?:\/\/|data:)/i.test(decoded)) {
+          if (!/^(https?:\/\/|data:)/i.test(decoded)) {
             document.write('Invalid protocol specified.');
             return;
           }
