style: Unrelated style fix

--- a/make.html
+++ b/make.html
@@ -36,7 +36,7 @@
         try {
           u += btoa(r);
         } catch (e) {
-          u += btoa("!" + encodeURIComponent(r));
+          u += btoa('!' + encodeURIComponent(r));
         }
         a.href = u;
         a.style.wordWrap = 'break-word';
