Replace console.log with console.error

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           location.replace(decoded);
         } catch(err) {
           document.write('Invalid redirect D:');
-          console.log(err);
+          console.error(err);
         }
       }());
     </script>
